--- a/src/lib/components/MeasurementLayer.css
+++ b/src/lib/components/MeasurementLayer.css
@@ -56,3 +56,78 @@
   stroke: none;
   fill: white;
 }
+
+.measurement-number-type {
+  align-items: center;
+  background: rgba(0, 0, 0, 0.7);
+  border-radius: 3px;
+  border: none;
+  box-sizing: border-box;
+  color: white;
+  display: flex;
+  font-size: 12px;
+  font-weight: 500;
+  height: 22px;
+  justify-content: center;
+  line-height: 15px;
+  padding: 3px 3px;
+  width: 50px;
+  border: 1px solid transparent;
+}
+
+.measurement-number-type:active, .measurement-number-type:hover {
+  border: 1px solid #33FFE2;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-right: none;
+}
+
+.measurement-input {
+  background: transparent;
+  border: none;
+  color: white;
+  display: flex;
+  justify-content: end;
+  padding-left: 5px;
+  padding-right: 5px;
+  width: 15px;
+}
+
+.measurement-input:focus {
+  outline: none;
+}
+
+.type {
+  background-color: transparent;
+  border: none;
+  border-left: 1px solid #6A6A6A;
+  color: white;
+  padding-left: 5px;
+  width: 10px;
+}
+
+.color-2 {
+  background: rgba(0, 0, 0, 0.7);
+
+}
+
+.delete-hide {
+  display: none;
+}
+
+.delete-button-2 {
+  align-items: center;;
+  background-color: rgba(0, 0, 0, 0.7);
+  border: 1px solid #33FFE2;
+  border-radius: 3px; 
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-left: none;
+  display:flex;
+  justify-content: center;
+  height: 20px;
+  outline: none;
+  position: absolute;
+  right: -18px;
+  width: 17px;
+}
