--- a/src/lib/components/core/MeasurementLayerBase.css
+++ b/src/lib/components/core/MeasurementLayerBase.css
@@ -89,6 +89,15 @@
   transition: color 0.3s, background-color 0.3s;
 }
 
+.measurement-text-2 {
+  position: relative;
+  padding: 1px 4px;
+  white-space: pre;
+  cursor: default;
+  /* Use color transitions rather than opacity, which blurs text for some reason. */
+  transition: color 0.3s, background-color 0.3s;
+}
+
 .measurement-layer-base.line-end-dragged
   .text-anchor.just-created
   .measurement-text,
