--- a/src/lib/components/MeasurementLayer.css
+++ b/src/lib/components/MeasurementLayer.css
@@ -88,6 +88,7 @@
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
   border-right: none;
+  z-index: 5;
 }
 
 .measurement-input, .measurement-input-2 {
@@ -145,4 +146,12 @@
   position: absolute;
   right: -18px;
   width: 17px;
+}
+
+.mesial {
+  color: cyan;
+}
+
+.selected {
+  z-index: 5;
 }
